Fixed errors to do with precipitation accumulation
errors included:
1. The initializeDays function was setting the precipitation accumulation
for the hours array for a city.
2. The precipitation accumulation dog was at the end of the line rather than
near the beginning where is should be.
3. The dog area was not scroll to the end if the size changed with the time.
(If the snowfall is not defined, the dog area width shinks).
4. When the snowfall dog was displayed, if the other dogs are in reverse direction,
it was not.

--- a/www/index.html
+++ b/www/index.html
@@ -34,11 +34,11 @@
 		</div>	
 		<ion-scroll class="scroll-section" scrollbar-x="false" delegate-handle="dogScroll" direction="x" on-touch="stopDog()">
 			<div class="dog-area">
-					<div class="weather-bearer" ng-repeat="(weatherTypeTitle, weatherDetails) in weatherInformationForTime[timeIndex]" ng-if="$index > 0">
+					<div class="weather-bearer" ng-repeat="weatherType in locations[locationsIndex].order" ng-if="$index > 0">
 						<div class="sign">
 							<div class="information">
-								{{weatherDetails.label}}<br>
-								{{weatherDetails.information}}
+								{{weatherInformationForTime[timeIndex][weatherType].label}}</br>
+								{{weatherInformationForTime[timeIndex][weatherType].information}}
 							</div>
 						</div>
 						<div class="dog">
